# MultiSinkAudio

./: .gitignore  LICENSE  README.md  settings.gradle.kts  构建aar. cmd
app/: audio_policy_configuration.xml  build.gradle.kts
app/src/androidTest/java/com/example/testaudiodevice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/multisinkaudio/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/testaudiodevice/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
multisink-alsa/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
multisink-alsa/src/main/cpp/: CMakeLists.txt  multisinkalsa_jni.cpp
multisink-alsa/src/main/java/com/example/multisinkaudio/alsa/: Mp3DecodeHelper.java  TinyAlsaMixer.java  TinyAlsaPcmPlayer.java  TinyAlsaPlayer.java  TinyAlsaTrackPlayer.java
scripts/: setup_device.bat  setup_device.ps1  setup_device_rk3399.bat  setup_device_rk3399.ps1
